fixed small typo error

--- a/_posts/2024-11-08-XSS.md
+++ b/_posts/2024-11-08-XSS.md
@@ -1,7 +1,7 @@
 ---
 title: XSS Cheat sheet
 date: 2024-11-08 18:30:45 +0100
-categories: [Cheat sheet, Web]
+categories: [Cheat sheet, Attaque]
 tags: [attaque]
 ---
 
